fix overflow and edit dimensions of grid

--- a/src/style.css
+++ b/src/style.css
@@ -10,24 +10,14 @@ body {
   display: grid;
   grid-template-rows: 4rem auto 4rem;
 
-  background: #fc5c7d; 
-  background: -webkit-linear-gradient(
-    to right,
-    #826afb,
-    #ff5e9e,
-    #ff9f4b
-  ); 
-  background: linear-gradient(
-    to right,
-    #826afb,
-    #ff5e9e,
-    #ff9f4b
-  ); 
+  background: #fc5c7d;
+  background: -webkit-linear-gradient(to right, #826afb, #ff5e9e, #ff9f4b);
+  background: linear-gradient(to right, #826afb, #ff5e9e, #ff9f4b);
 
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
   animation: gradient 15s ease infinite;
-  height: 100vh;
+  overflow-x: hidden;
 
   font-family: "Anuphan", sans-serif;
   font-size: 16px;
@@ -37,7 +27,7 @@ body {
 
 .app-container {
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto 3fr;
   grid-template-columns: 1fr 2fr;
   padding: 1rem;
   gap: 1rem;
@@ -54,15 +44,50 @@ body {
   height: fit-content;
 }
 
+button {
+  padding: 3px;
+  appearance: none;
+  border-radius: 4px;
+  border-color: transparent;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #ffffff;
+  font-size: 16px;
+}
+
+button:hover,
+label:hover {
+  cursor: pointer;
+}
+
+input {
+  width: 100%;
+  padding: 3px;
+  appearance: none;
+  border-radius: 4px;
+  border-color: transparent;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
+  outline: none;
+  font-size: 16px;
+}
+
+input:focus,
+button:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
 .forecast-container {
   display: grid;
-  gap: 2rem;
+  gap: 1rem;
+  grid-template-rows: 1fr 10fr;
   grid-area: 2/1/3/3;
 }
 
 .forecast-header {
   display: flex;
   align-items: end;
+  justify-content: center;
+  font-size: 20px;
   font-weight: 800;
   text-transform: uppercase;
 }
@@ -71,7 +96,7 @@ body {
   display: grid;
   justify-content: center;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
 }
 
 .forecast-card {
@@ -121,13 +146,6 @@ form {
   display: flex;
 }
 
-input {
-  appearance: none;
-  border: none;
-  border-radius: 1rem;
-  padding: 5px;
-}
-
 /* turn icons white */
 img {
   filter: brightness(100);
@@ -144,7 +162,7 @@ img {
   font-size: 24px; /* 1 */
   height: 1em;
   width: 2em;
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 1em;
 }
 
@@ -152,7 +170,7 @@ img {
   height: 1em;
   width: 1em;
   border-radius: 1em;
-  background: #fff;
+  background: rgba(255, 255, 255, 0.3);
   box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
   -webkit-transition: all 300ms;
   -moz-transition: all 300ms;
@@ -169,17 +187,19 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: gray;
+  color: white;
 }
 
 .div::before {
   content: "°C";
   font-size: 12px;
+  font-weight: 800;
 }
 
 input:checked + .div::before {
   content: "°F";
   font-size: 12px;
+  font-weight: 800;
 }
 /* end temperature toggle switch */
 
